--- a/docs/REPORT_INITIAL.tex
+++ b/docs/REPORT_INITIAL.tex
@@ -845,21 +845,90 @@ Student 4 tts1848: Emi Simpson\\
 
 
     \section{Data Analysis}
-
-    
     
     
     \subsection{Hypothesis}
-    Use this section to state the objectives of your data analysis; what are the observations you are expecting to find. Note that your final
-    observations may end up differing from your proposal, that is also a valid result.
-    \subsection{Data Preprocessing}
-    Use this section to describe the preprocessing steps you have performed to prepare the data for the analytics. Preprocessing steps may include: data cleaning (e.g., filling missing values, fixing outliers), formatting the data (e.g., resolving issues like inconsistent abbreviations, multiples date format in the data), combining or splitting fields, add new information (data enrichness).
 
-    Explain how the data was extracted from the database for the analysis; if you used complex queries or views, or both.
+    Our objectives for data analysis are to study how the song length affects
+    if a song is played, the most popular song length, and if the most popular
+    song length has an impact on the song getting featured on the artist's album.
+    We expect to find the average song length to be around three to four minutes
+    due to most songs following the structure of two verses, three choruses,
+    a bridge, and possibly an outro. Additionally, since we represent any single
+    songs as albums, we expect to see many albums have an average song length of
+    also around three to four minutes.
+
+    \subsection{Data Preprocessing}
+    Our data was extracted from our database using complex SQL queries and downloading
+    the execution results to an Excel CSV file. From there, the data was cleaned to ensure
+    all songs had a length greater than 0. We also decided to keep our song representation in
+    seconds rather than convert it to minutes and seconds.
+
+
+
     \subsection{Data Analytics \& Visualization}
-    Use this section to explain the process/techniques used to analyze the data, use data visualization to present the results, and explain them.
+
+    \begin{center}
+        \includegraphics[width=5.5in]{Graphs/Plays_SongLength.png}
+    \end{center}
+    \caption{Plays vs. Song Length}
+    \label{Plays vs. Song Length}
+
+    \vspace{0.5cm}
+
+    \noindent This scatter plot compares the length of songs to the total amount of plays of
+    songs of that length. We noticed that there is a very large spike in the 200 to 300
+    second range which is about 3.5 to 5 minutes. This implies that the most
+    popular songs are within that range. Songs that are outside the 200 to 300 seconds
+    range are much less likely to be played by the user. The outliers seen past the 1300
+    second mark (21 minutes) suggests that these songs are rarely played because of their
+    length.
+%    To elaborate, given that songs that 200 to 300 seconds long are very
+%    common as opposed to the outliers that are 60 or 600 seconds long, there\s more
+%    songs in that range to play. With more songs to play, popularity of individual
+%    songs doesn\t necessarily line up with this scatter plots clear bell shape.
+%    The bell shape shows that the most played songs are within the 200 to 300 second
+%    range and, assuming the distribution of song lengths isn\’t
+%    inversely proportional to this bell shape, this allow implies, most likely with
+%    some accuracy, that the most played individual songs are within the 200 to 300
+%    second range.
+
+    \begin{center}
+        \includegraphics[width=5.5in]{Graphs/AvgSongLen_ArtistAlbums.png}
+    \end{center}
+    \caption{Artist Average Song Length vs. Artist Average Amount of Albums}
+    \label{Artist Avg Song Len vs. Artist Avg Amt of Albums}
+
+    \vspace{0.5cm}
+
+    \noindent Comparing the amount of albums of an artist against the average length
+    of all of their songs, we notice how many artists keep their songs within the
+    150 second to 400 second range which ranges from 2.5 to 6.5 minutes respectively.
+
+
+    \begin{center}
+        \includegraphics[width=5.5in]{Graphs/AvgAlbumSongLen_by_NumSongs.png}
+    \end{center}
+    \caption{Average Song Length of an Album vs. Number of Songs in the Album}
+    \label{Avg Song Len of Album vs. Num Songs in Album}
+
+    \vspace{0.5cm}
+
+    \noindent This graph visualizes the consistency of an album's total duration
+    despite varies number of songs within the collection by analyzing the average
+    song length against the total number of songs in the album. We have discovered
+    that there is a very small correlation between the comparisons due to the nearly
+    horizontal line of best fit. Despite the small correlation, we can conclude that
+    very few albums have been made with song lengths that exceed 1200 seconds
+    (20 minutes).
+
+
     \subsection{Conclusions}
     Use this section to explain the conclusions drawn from your data analysis.\\
+
+    From our data analysis, we can conclude that the most popular song length is
+    between 200 and 400 seconds (3.5 to 6.5 minutes).
+
     \section{Lessons Learned}
     Use this section to describe the issues you faced during the project and how you overcame them. Also, describe what you learned during this effort; this section, like the others, plays a critical component in determining your final grade.\\
 
